# neojam

./: CMakeLists.txt  README.md
doc/: README.md  files.md
lib/: all.cls  build.sh
src/: access.c  alloc.c  alloc.h  annotations.c  arch.h  class.c  class.h  classlib.h  config.h  darwin_callNative.S  darwin_dll_md.c  darwin_os.c  dll.c  excep.c  excep.h  execute.c  frame.c  hash.c  hash.h  hooks.c  init.c  interp.c  jam.h  java.c  jni-internal.h  jni.c  jni.h  lock.c  main.c  mycib_class.c  myclib.h  myclib_alloc.c  myclib_dll.c  myclib_excep.c  myclib_frame.c  myclib_jni.c  myclib_natives.c  myclib_properties.c  myclib_reflect.c  myclib_thread.c  (+16 more)
src/core/: access.c  alloc.c  annotations.h  cast.c  class.c  class.h  classlib.h  config.h  dll.c  excep.c  frame.h  init.c  inlining.h  interp-indirect.h  interp.c  interp.h  jni.c  jni.h  lock.h  natives.c  natives.h  reflect.c  reflect.h  sig.h  string.c  symbol.c  symbol.h  thread.c  time.c  utf8.c  zip.h
src/darwin_x86_64/: darwin_callNative.S  darwin_dll_md.c  darwin_init.c  darwin_os.c
src/gcp/: gcp.h  gcp_alloc.c  gcp_class.c  gcp_dll.c  gcp_excep.c  gcp_frame.c  gcp_jni.c  gcp_natives.c  gcp_properties.c  gcp_reflect.c  gcp_thread.c
